tests/compile-fail/no_type.rs
use enum_discriminant::discriminant;

#[discriminant()]
enum EnumWithNoType {
    Unit = 17,
}

fn main() {}
