tests/compile-fail/no_type.stderr
error: Valid enum representation type expected as argument to the discriminant macro, e.g., #[discriminant(u8)]
 --> tests/compile-fail/no_type.rs:3:1
  |
3 | #[discriminant()]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `discriminant` (in Nightly builds, run with -Z macro-backtrace for more info)
